--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Erwin Cabrera <erwin.d.cabrera@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-sass": "^4.1.0"
   }
 }
