--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "autoprefixer": "^10.1.0",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-postcss": "^9.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^3.0.0",
